Update DEIM submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/varnan6/DiffusionDet.git
 [submodule "external/DEIM"]
 	path = external/DEIM
-	url = https://github.com/varnan6/DiffusionDet.git
+	url = https://github.com/varnan6/DEIM.git
